--- a/node-exporter.yaml
+++ b/node-exporter.yaml
@@ -14,6 +14,7 @@
       - netdev
       - thermal_zone
       - udp_queues
+      - uname
   tasks:
     - name: download node exporter binary
       ansible.builtin.unarchive:
