adds time collector to node-exporter

--- a/node-exporter.yaml
+++ b/node-exporter.yaml
@@ -16,6 +16,7 @@
       - udp_queues
       - uname
       - stat
+      - time
   tasks:
     - name: download node exporter binary
       ansible.builtin.unarchive:
